--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@opentelemetry/api": "^1.8.0",
     "@opentelemetry/auto-instrumentations-node": "^0.46.0",
+    "@opentelemetry/exporter-logs-otlp-http": "^0.51.1",
+    "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.51.1",
+    "@opentelemetry/resources": "^1.24.1",
     "@opentelemetry/sdk-metrics": "^1.24.1",
     "@opentelemetry/sdk-node": "^0.51.1",
     "@opentelemetry/sdk-trace-node": "^1.24.1",
